# data-quality-checkr

./: # Python for Data Engineers  .gitignore  CHANGELOG.md  DEBUGGING_GUIDE.md  README.md  checks.yml  handoff.md  production-ready-library.md  pyproject.toml  repo-structure.md
.claude/skills/project-context/: SKILL.md  architecture.md  conventions.md  workflows.md
docs/architecture/: README.md
docs/cli/: README.md
docs/data-quality/: README.md
docs/pipelines/: README.md
docs/python/: README.md
docs/sql/: README.md
sample_data/: 01_golden.csv  01_golden.parquet  02_nulls.csv  03_duplicates.csv  04_bad_enum.csv  05_mixed_failures.csv  06_empty.csv  07_single_row.csv  08_large_10k.csv  08_large_10k.parquet  09_child_employees_clean.csv  09_child_employees_orphans.csv  09_parent_departments.csv  10_unicode_stress.csv  11_type_coercion_traps.csv  checks_enum_only.yml  checks_full.yml  checks_nulls_only.yml  checks_unique_only.yml  debug_script.py  generate_data.py
scripts/: setup.sh  test.sh
src/data_quality_checker/: __init__.py  cli.py  main.py
src/data_quality_checker/connector/: output_log.py
tests/: conftest.py
tests/unit/: test_cli.py  test_main.py  test_output_log.py
